chore: use vw to avoid overflow on mobile

--- a/src/components/RewardsSection/RewardsSection.module.scss
+++ b/src/components/RewardsSection/RewardsSection.module.scss
@@ -7,6 +7,10 @@
   h6 {
     font-size: var(--text-xl);
   }
+
+  @include for-mobile-only {
+    width: 100vw;
+  }
 }
 
 .header {
